--- a/HybridOfActiTime/test-output/index.html
+++ b/HybridOfActiTime/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Sandip\AppData\Local\Temp\testng-eclipse-2021042570\testng-customsuite.xml</span>
+                    <span>C:\Users\Sandip\AppData\Local\Temp\testng-eclipse--578136127\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testPackage.TestActiTimeInvalidLogin" class="method navigator-link" hash-for-method="invalidLogin">invalidLogin</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testPackage.TestLogout" class="method navigator-link" hash-for-method="testLogoutTab">testLogoutTab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testPackage.TestActiTimeInvalidLogin</span>
+              <span class="class-name">testPackage.TestLogout</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="invalidLogin">
-                  </a> <!-- invalidLogin -->
-                  <span class="method-name">invalidLogin</span>
+                  <a name="testLogoutTab">
+                  </a> <!-- testLogoutTab -->
+                  <span class="method-name">testLogoutTab</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Sandip\AppData\Local\Temp\testng-eclipse-2021042570\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Sandip\AppData\Local\Temp\testng-eclipse--578136127\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testPackage.TestActiTimeInvalidLogin&quot;/&gt;
+      &lt;class name=&quot;testPackage.TestLogout&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'invalidLogin')
-data.setCell(0, 2, 'testPackage.TestActiTimeInvalidLogin')
-data.setCell(0, 3, 39775);
+data.setCell(0, 1, 'testLogoutTab')
+data.setCell(0, 2, 'testPackage.TestLogout')
+data.setCell(0, 3, 7543);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 39 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,18 +221,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testPackage.TestActiTimeInvalidLogin</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testPackage.TestLogout</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">invalidLogin</span>
-                <span class="method-start">6438 ms</span>
+                <span class="method-name">testLogoutTab</span>
+                <span class="method-start">3859 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">46218 ms</span>
+                <span class="method-start">11412 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
