--- a/HybridOfActiTime/test-output/old/Default suite/classes.html
+++ b/HybridOfActiTime/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testPackage.TestActiTimeInvalidLogin</td>
+<td>testPackage.TestLogout</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>invalidLogin</td>
+<td>testLogoutTab</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
