--- a/HybridOfActiTime/test-output/old/Default suite/methods.html
+++ b/HybridOfActiTime/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d88769">  <td>23/02/07 16:52:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:testPackage.TestActiTimeInvalidLogin@696da30b]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1349182676</td>   <td></td> </tr>
-<tr bgcolor="a2f4ec">  <td>23/02/07 16:51:51</td>   <td>-39780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestActiTimeInvalidLogin.invalidLogin()[pri:0, instance:testPackage.TestActiTimeInvalidLogin@696da30b]">invalidLogin</td> 
-  <td>main@1349182676</td>   <td></td> </tr>
-<tr bgcolor="d88769">  <td>23/02/07 16:51:44</td>   <td>-46215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:testPackage.TestActiTimeInvalidLogin@696da30b]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1349182676</td>   <td></td> </tr>
+<tr bgcolor="d88769">  <td>23/02/08 12:29:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:testPackage.TestLogout@79da8dc5]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="a2f4ec">  <td>23/02/08 12:28:52</td>   <td>-7555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLogout.testLogoutTab()[pri:0, instance:testPackage.TestLogout@79da8dc5]">testLogoutTab</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="d88769">  <td>23/02/08 12:28:49</td>   <td>-11411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:testPackage.TestLogout@79da8dc5]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
 </table>
